# xstate-statemachine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  smart_home_logic.py  smart_home_runner.py  smarthome.json  temp_factory_logic_module.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: _config.yml  index.html
docs/_guide/: actions.md  actors.md  changelog.md  cli-hierarchy.md  cli-templates.md  cli.md  context.md  core-concepts.md  delayed-transitions.md  diagrams.md  examples.md  faq.md  final-states.md  getting-started.md  guards.md  hierarchical.md  interpreters.md  json-config.md  parallel.md  plugins.md  pythonic-api.md  quick-start.md  services.md  snapshots.md  troubleshooting.md
docs/_layouts/: default.html
docs/api/: index.md
docs/assets/css/: style.css
docs/assets/js/: main.js  search-index.json
docs/superpowers/plans/: 2026-03-22-cli-code-generation-redesign.md  2026-03-22-pythonic-api.md
docs/superpowers/specs/: 2026-03-22-cli-code-generation-redesign.md  2026-03-22-pythonic-api-design.md
examples/: cicd_machine.py  drone_machine.py  food_delivery_machine.py
examples/async/basic/class_approach/with_logic_loader/data_fetcher/: data_fetcher.json  data_fetcher_logic.py  data_fetcher_runner.py
examples/async/basic/class_approach/without_logic_loader/session_timeout/: session_timeout.json  session_timeout_logic.py  session_timeout_runner.py
examples/async/super_complex/functional_approach/with_logic_loader/: collaborative_editor.json  collaborative_editor_logic.py  collaborative_editor_runner.py  collaborator_cursor_actor.json
examples/cell_editor/: cell_editor_machine.py
examples/chatbot/: chatbot.json  chatbot_machine.py
examples/coffee_machine/: coffe_machine_runner.py  coffee_machine.json  coffee_machine_logic.py
examples/hybrid/manufacturing_line/: hybrid_manufacturing.py  manufacturing_line_async.json  quality_check_sync.json
examples/sync/: sync_vending_machine.py
examples/sync/document_editor/: document_editor.json  document_editor_logic.py  sync_document_editor.py
examples/sync/easy/class_approach/with_logic_loader/: fan_controller.json  fan_controller_runner.py
examples/sync/super_complex/functional_approach/with_logic_loader/: ecommerce_fulfillment.json  ecommerce_fulfillment_logic.py  ecommerce_fulfillment_runner.py
examples/sync/user_auth/: user_auth.json  user_auth_logic.py  user_auth_runner.py
examples/tape_recorder/: TapeRecorder.json  tape_recorder_machine.py
examples/with_logic_loader/coffee_machine/class_approach/: coffee_machine_class_logic.py  coffee_machine_class_runner.py
examples/with_logic_loader/coffee_machine/functional_approach/: coffee_machine_async_runner.py  coffee_machine_hybrid_runner.py  coffee_machine_logic.py  coffee_machine_runner.py
examples/without_logic_loader/: cicd_machine.py  food_delivery_machine.py
examples/without_logic_loader/cell_editor/: cell_editor.json  cell_editor_machine.py
src/xstate_machine/: __init__.py  events.py  exceptions.py  factory.py  interpreter.py  logger.py  machine_logic.py  models.py  plugins.py  resolver.py  task_manager.py
src/xstate_statemachine/: __init__.py  base_interpreter.py  cli.py  events.py  exceptions.py  factory.py  interpreter.py  logger.py  logic_loader.py  machine_logic.py  models.py  plugins.py  pythonic.py  resolver.py  sync_interpreter.py  task_manager.py
src/xstate_statemachine/cli/: __init__.py  __main__.py  args.py  extractor.py  generator.py  utils.py
src/xstate_statemachine/cli/strategies/: __init__.py  _shared.py  base.py  class_json.py  function_json.py  pythonic_builder.py  pythonic_class.py  pythonic_functional.py
src/xstate_statemachine/inspector/: __init__.py  db.py  plugin.py  server.py
src/xstate_statemachine/inspector/frontend/: app.js  components.json  index.html  package-lock.json  package.json  postcss.config.js  style.css  tailwind.config.js  tsconfig.node.json  vite.config.ts  xstate_inspector.db
src/xstate_statemachine/inspector/frontend/src/: App.tsx  app.js  index.css  main.tsx
tests/: test_cli.py  test_event_payload.py  test_exceptions.py  test_factory.py  test_internals.py  test_interpreter.py  test_issue_17.py  test_logic_loader.py  test_models.py  test_models_and_resolver.py  test_plugins.py  test_pythonic.py  test_resolver.py  test_sync_interpreter.py  test_task_manager.py
tests/tests_cli/: __init__.py  base.py  fixtures.py  test_args.py  test_class_json_strategy.py  test_extractor.py  test_function_json_strategy.py  test_generator.py  test_hierarchy_pythonic.py  test_main_execution.py  test_production_quality.py  test_pythonic_builder_strategy.py  test_pythonic_class_strategy.py  test_pythonic_functional_strategy.py  test_stately_100_complex.py  test_stately_real_machines.py  test_strategy_registry.py  test_stress_50machines.py  test_utils.py
tests/tests_cli/stately_machines/: APA_Logic.json  APA_LogicSM.json  APA_v1.json  APA_v3.json  AdvancePayment.json  AtmScenario.json  AuthenticationFull.json  ConsoleLifecycle.json  CopilotChat.json  DebtState.json  DebtState_v2.json  DebtState_v4.json  ED.json  HeizstabController.json  HeizstabNoAI.json  HelloWorld.json  Hierarchy.json  IRStateMachine.json  Installation_v1.json  Installation_v2.json  Joyride.json  Kiosk.json  LANE_CHANGE_v2.json  LANE_VALIDITY.json  LaneChangeMaya.json  New_Machine.json  Parallelism.json  Parking.json  PlaybookMachine.json  PolicyMachine.json  Predictive_Polarion.json  Predictive_passive.json  SimplePayment.json  TMC2209_motion.json  ThermoValveCtrl.json  Token.json  Trap_Room_v2.json  Ye_Shunguang.json  addressFields.json  aiWorkflow.json  (+55 more)
tests/tests_inspector/: test_inspector.py
(+123 files in other folders)
