# pyproject.toml

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xstate-statemachine"
version = "0.5.0"
description = "A robust Python library for parsing and running XState JSON state machines."
authors = ["Basil T T <tt.basil@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/basiltt/xstate-statemachine"
repository = "https://github.com/basiltt/xstate-statemachine"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8"
# Inspector dependencies (optional)
fastapi = {version = "^0.116.1", optional = true}
uvicorn = {version = "^0.23.2", extras = ["standard"], optional = true}
websockets = {version = "^12.0", optional = true}
SQLAlchemy = {version = "^2.0.43", optional = true}
sqlmodel = {version = "^0.0.22", optional = true}
python-dotenv = {version = "^1.0.0", optional = true}
# Dev dependencies (optional)
pytest = {version = "^7.4.0", optional = true}
pytest-asyncio = {version = "^0.21.0", optional = true}
httpx = {version = "^0.25.0", optional = true}

[tool.poetry.extras]
inspector = ["fastapi", "uvicorn", "websockets", "SQLAlchemy", "sqlmodel", "python-dotenv"]
dev = ["pytest", "pytest-asyncio", "httpx", "fastapi", "uvicorn", "websockets", "SQLAlchemy", "sqlmodel", "python-dotenv"]

[tool.poetry.scripts]
xsm = "xstate_statemachine.cli.__main__:main"
