[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xstate-statemachine"
version = "0.5.0"
description = "A robust Python library for parsing and running XState JSON state machines."
authors = ["Basil T T <tt.basil@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/basiltt/xstate-statemachine"
repository = "https://github.com/basiltt/xstate-statemachine"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "src/xstate_statemachine/inspector/frontend/dist/**/*",
]

[tool.poetry.dependencies]
python = ">=3.9"

# Inspector dependencies (optional)
fastapi = { version = "^0.116.1", optional = true }
uvicorn = { version = "^0.23.2", extras = ["standard"], optional = true }
websockets = { version = "^12.0", optional = true }
SQLAlchemy = { version = "^2.0.43", optional = true }
sqlmodel = { version = "^0.0.22", optional = true }
python-dotenv = { version = "^1.0.0", optional = true }
pre-commit = "^4.3.0"

[tool.poetry.extras]
# Install with: poetry install -E inspector
inspector = ["fastapi", "uvicorn", "websockets", "SQLAlchemy", "sqlmodel", "python-dotenv"]

# Dev tools are moved to a dependency group so `--with dev` works.
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"

[tool.poetry.scripts]
xsm = "xstate_statemachine.cli.__main__:main"
